# Tiny-VLM-Rust-WASM

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  PRODUCTION_READINESS.md  PROJECT_CHARTER.md  README.md  SECURITY.md  autonomous_sdlc_demo  generation1_demo  generation1_standalone_demo.rs  generation2_fixed_demo  generation2_fixed_demo.rs  generation2_robust_demo.rs  generation2_simple_demo  generation2_simple_robust_demo.rs  generation3_fixed_demo.rs  generation3_optimized_demo.rs  generation3_simple_demo  generation3_simple_optimized_demo.rs  global_first_demo.rs  multi_region_deployment_demo.rs  package.json  production_deployment  production_deployment.rs  production_deployment_demo.rs  quality_gates_demo  quality_gates_demo.rs  quality_gates_testing  quality_gates_testing.rs  research_mode_demo.rs  standalone_generation1_demo.rs
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
benches/: performance_benchmarks.rs
deploy/: production.yaml
deploy/docker/: Dockerfile.production  docker-compose.production.yml
deploy/kubernetes/: production.yaml
docs/: ROADMAP.md
docs/adr/: 0001-rust-wasm-architecture.md  template.md
examples/: autonomous_sdlc_demo.rs  basic_generation1_demo.rs  basic_inference.rs  basic_vlm_demo.rs  complete_inference.rs  generation1_demo.rs  generation1_fixed_demo.rs  generation1_simple_demo.rs  generation1_working.rs  generation2_robust.rs  generation3_optimized.rs  performance_benchmark.rs  production_deployment_ready.rs  production_ready.rs  quality_gates_comprehensive.rs  research_experiment.rs  standalone_generation1.rs  wasm_demo.rs  working_generation1_demo.rs
scripts/: build_wasm.sh  deploy_production.sh  quality_gates.sh
src/: benchmarks.rs  deployment.rs  error.rs  health.rs  integration_simple.rs  lib.rs  logging.rs  memory.rs  models.rs  monitoring.rs  monitoring_advanced.rs  optimization.rs  recovery.rs  reliability.rs  research.rs  scaling.rs  scaling_advanced.rs  security.rs  security_advanced.rs  simd.rs  simple_vlm.rs  text.rs  threat_intelligence.rs  validation.rs  vision.rs  wasm.rs
src/data/: cache.rs  dataset.rs  loader.rs  mod.rs  transforms.rs
src/gpu/: cuda.rs  metal.rs  mod.rs  opencl.rs
src/simd/: advanced.rs  arm_neon.rs  avx2.rs  mod.rs  wasm_simd.rs
tests/: integration_tests.rs
